@@ -34,9 +34,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     Sccsid: @(#)nail.1	2.294 (gritter) 1/15/05
+.\"     Sccsid: @(#)nail.1	2.295 (gritter) 2/12/05
 .\"
-.TH NAIL 1 "1/15/05" "nail 11.21" "User Commands"
+.TH NAIL 1 "2/12/05" "nail 11.21" "User Commands"
 .SH NAME
 nail \- send and receive Internet mail
 .SH SYNOPSIS
@@ -1347,6 +1347,11 @@ This is the default action for messages
 if unless the
 .I hold
 option is set.
+.I nail
+deviates from the POSIX standard with this command,
+as a `next' command issued after `mbox'
+will display the following message,
+not the current one.
 .TP
 .B move
 (mv) Acts like
@@ -1732,6 +1737,11 @@ Takes a message list
 and marks the messages for saving in the
 .I mbox
 file.
+.I nail
+deviates from the POSIX standard with this command,
+as a `next' command issued after `mbox'
+will display the following message,
+not the current one.
 .TP
 .B Type
 (T) Identical to the Print command.
